[workspace]
resolver = "2"
members = [
    "hid-sctrl"
]

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
rustix = { version = "1.1.4" }
tokio = { version = "1.52.3" }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
